# BetterJobSearch

./: .env.example  .gitignore  README.md  SYSTEM.md  keyword_analysis.ipynb  pyproject.toml  tutorial.ipynb
.claude/: settings.local.json
archive/: classify.py  feedback.py  review.py
config/: facet_synonyms.yml  facets.yml  scoring.yml
data/: sample_jobs.json  sample_jobs_multi_lang.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AspectSelector.tsx  ChatPanel.tsx  ClusterSettings.tsx  FilterPanel.tsx  JobDetail.tsx  JobTable.tsx  KeywordSettings.tsx  LabelDialog.tsx  PresetBar.tsx  ScatterPlot.tsx
frontend/src/hooks/: useClusters.ts  useJobs.ts  useLabels.ts  useWebSocket.ts
scripts/: add_language_to_chunks.py  detect_job_languages.py
src/: __init__.py  agentic_rag.py  clustering.py  config.py  llm_io.py  pipeline.py  rag.py  retrieval.py
src/agents/: __init__.py  context.py  coordinator.py  loop.py  memory.py
src/agents/tools/: __init__.py  cluster_tools.py  nlp_tools.py  registry.py  retrieval_tools.py  search_tools.py
src/agents/workers/: __init__.py  analysis_worker.py  exploration_worker.py  search_worker.py
src/api/: __init__.py  main.py
src/api/routes/: aspects.py  chat.py  clusters.py  jobs.py  labels.py  search.py
src/clustering_v2/: __init__.py  aspect_clustering.py  cache.py  clusterer.py  hierarchy.py  hulls.py  label_layout.py  labeler.py  palette.py  projector.py
src/models/: __init__.py  agent.py  aspect.py  chunk.py  cluster.py  job.py
src/nlp/: __init__.py  aspect_extractor.py  chunker.py  cleaner.py  entity_normalizer.py  keyword_extractor.py  mutual_information.py  ngram_extraction.py  section_detector.py
src/nlp/extractors/: __init__.py  benefits.py  culture.py  domain.py  education.py  experience.py  language.py  remote_policy.py  skills.py
src/nlp/vocab/: degrees.txt  languages.txt  skills.txt  tools.txt
src/search/: __init__.py  embedder.py  indexer.py  reranker.py  retriever.py
src/ui/: app.py
src/ui/assets/: styles.css
