[project]
name = "better-job-search"
version = "1.0.0"
description = "A job market analysis toolkit with RAG-powered semantic search, clustering, and interactive visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sina Karaoglu"}
]
keywords = ["jobs", "nlp", "rag", "search", "clustering", "dash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2",
    "beautifulsoup4>=4.12",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = [
    "dash>=2.15",
    "dash-bootstrap-components>=1.5",
    "dash-ag-grid>=31.0",
    "dash-resizable-panels>=0.1",
    "plotly>=5.22",
    "requests>=2.31",
    "pillow>=10.0",
    "ddgs>=6.0",
    "XlsxWriter>=3.2",
]
llm = [
    "openai>=1.0",
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "ipykernel>=6.20",
    "jupyterlab>=4.0",
]
all = [
    "better-job-search[ui,llm,dev]",
]

[project.scripts]
better-job-search = "src.pipeline:main"

[project.urls]
Homepage = "https://github.com/karaoglusina/better-job-search"
Repository = "https://github.com/karaoglusina/better-job-search"
Issues = "https://github.com/karaoglusina/better-job-search/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
